# prediction-arb

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
prediction_arb/: __init__.py  cache.py  capital.py  cli.py  coverage.py  dashboard.py  depth.py  diagnostics.py  http.py  matching.py  models.py  monitor.py  near.py  paper.py  portfolio.py  query_diagnostics.py  reporting.py  research.py  review_analysis.py  review_store.py  risk.py  scanner.py  telegram_bot.py
prediction_arb/sources/: kalshi.py  limitless.py  polymarket.py
tests/: test_cache.py  test_capital.py  test_cli.py  test_coverage.py  test_dashboard.py  test_depth.py  test_diagnostics.py  test_kalshi.py  test_limitless.py  test_matching.py  test_monitor.py  test_near.py  test_paper.py  test_polymarket.py  test_query_diagnostics.py  test_reporting.py  test_research.py  test_review_risk.py  test_risk_review.py  test_telegram_bot.py
